# Neuro-AI

./: .gitignore  CLAUDE.md  README.md  STATUS.md  audit-report-2026-05-14.md  pyproject.toml
docs/: MVP0_BUILD_PLAN.md  PROJECT_PLAN.md
experiments/: 02_phase2_retrieval_baseline.py  03_phase3a_hebbian_codebook.py  03_phase3b_error_driven.py  04_phase3c_reconstruction.py  05_recall_landscape_diagnostic.py  06_decode_strategy_diagnostic.py  07_consistency_reranking.py  08_large_landscape_maskfree.py  09_multiscale_retrieval.py  10_bigram_scale_coverage.py  11_multiscale_vs_bigram.py  12_multiscale_validation.py  13_per_scale_codebooks.py  14_per_scale_multiscale_eval.py  15_multiscale_validation_robust.py  16_autoregressive_generation.py  17_cap_coverage_diagnostic.py  18_phase4_unified_experiment.py  19_phase34_integrated.py  20_ham_vs_summed.py  21_ham_with_phase4.py  22_codebook_health_diagnostic.py  22b_summarize_diagnostic.py  23_stable_updater_diagnostic.py  24_hebbian_diagnostic.py  25_lsr_kernel_sweep.py  26_permutation_slots_ablation.py  27_permutation_slots_coupled_recall.py  28_synergy_probe_phase4.py  29_replay_store_upgrades_ablation.py  30_mps_benchmark_d4096.py  31_phase3_comparison.py  32_phase3_synergy_comparison.py  33_reconstruction_characterization.py  34_per_scale_atom_geometry.py  35_native_w_codebook_eval.py  36_engagement_gate_audit.py  37_seed_diagnostic.py  40_phase5_branching.py  check_mps.py  (+10 more)
notes/: briefing.md
reports/: 001_temporal_recall.md  002_regime_sweep.csv  002_regime_sweep.md  003_joint_energy_disambiguation.md  (+73 more)
(+204 files in other folders)
